--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,9 +18,17 @@
         </li>
       </ul>
     </div>
-
-    <button type="button" class="btn btn-outline-success" data-bs-toggle="modal"
-      data-bs-target="#loginModal">Login</button>
+    <div *ngIf="!isLoggedIn()">
+      <button type="button" class="btn btn-outline-success" data-bs-toggle="modal"
+        data-bs-target="#loginModal">Login</button>
+    </div>
+    <div *ngIf="isLoggedIn()">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Create Sheet</a>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
 
@@ -30,18 +38,20 @@
     <div class="modal-content ">
 
       <div class="modal-body text-center">
+        <form class="form-signin" [formGroup]="checkoutForm" (ngSubmit)="onSubmit($event)">
+          <main>
 
-        <main class="form-signin">
-          <form>
             <img class="mb-4" src="../assets/imgs/dnd.png" alt="" width="103" height="96">
             <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
             <div class="form-floating">
-              <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+              <input type="email" class="form-control" id="floatingInput" for="user" formControlName="user"
+                placeholder="name@example.com">
               <label for="floatingInput">Email address</label>
             </div>
             <div class="form-floating">
-              <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+              <input type="password" class="form-control" id="floatingPassword" for="password"
+                formControlName="password" placeholder="Password">
               <label for="floatingPassword">Password</label>
             </div>
 
@@ -50,13 +60,14 @@
                 <input type="checkbox" value="remember-me"> Remember me
               </label>
             </div>
-            <button class="w-100 btn btn-lg btn-dark" type="submit">Log In</button>
+            <button class="w-100 btn btn-lg btn-dark" data-bs-dismiss="modal" type="submit">Log In</button>
             <br />
             <br />
-            <button class="w-100 btn btn-lg btn-secondary" type="submit">Sign in</button>
+            <button class="w-100 btn btn-lg btn-secondary">Sign in</button>
             <p class="mt-5 mb-3 text-muted">&copy; 2021–2022</p>
-          </form>
-        </main>
+
+          </main>
+        </form>
       </div>
     </div>
   </div>
