exibir nome usuario

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
     <div *ngIf="isLoggedIn()">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Create Sheet</a>
+          <a class="nav-link active" aria-current="page" href="#">{{user}}</a>
         </li>
       </ul>
     </div>
