--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg  navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand">
       <img src="../assets/imgs/dnd.png" alt="" width="50" height="50" class="d-inline-block">
       D&D Character Maker
     </a>
@@ -11,10 +11,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Create Sheet</a>
+          <a class="nav-link" aria-current="page" routerLink="/sheet" routerLinkActive="active">Create Sheet</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">How To Create a Sheet</a>
+          <a class="nav-link">How To Create a Sheet</a>
         </li>
       </ul>
     </div>
@@ -31,7 +31,7 @@
     </div>
   </div>
 </nav>
-
+<router-outlet></router-outlet>
 <!-- Modal -->
 <div class="modal fade modalColor" id="loginModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
