--- a/src/app/sheet/sheet.component.html
+++ b/src/app/sheet/sheet.component.html
@@ -87,6 +87,87 @@
               </div>
             </div>
           </div>
+          <br>
+          <div class="row">
+            <div class="col-sm">
+              <div class="card text-center">
+                <div class="card-header">
+                  FORÇA
+                </div>
+                <div class="card-body">
+                  <input type="number" class="form-control text-center" value="10" />
+                </div>
+                <div class="card-footer">
+                  <span class="badge bg-primary">+0</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm">
+              <div class="card text-center">
+                <div class="card-header">
+                  DESTREZA
+                </div>
+                <div class="card-body">
+                  <input type="number" class="form-control text-center" value="10" />
+                </div>
+                <div class="card-footer">
+                  <span class="badge bg-primary">+0</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm">
+              <div class="card text-center">
+                <div class="card-header">
+                  CONSTITUIÇÃO
+                </div>
+                <div class="card-body">
+                  <input type="number" class="form-control text-center" value="10" />
+                </div>
+                <div class="card-footer">
+                  <span class="badge bg-primary">+0</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm">
+              <div class="card text-center">
+                <div class="card-header">
+                  INTELIGÊNCIA
+                </div>
+                <div class="card-body">
+                  <input type="number" class="form-control text-center" value="10" />
+                </div>
+                <div class="card-footer">
+                  <span class="badge bg-primary">+0</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm">
+              <div class="card text-center">
+                <div class="card-header">
+                  SABEDORIA
+                </div>
+                <div class="card-body  ">
+                  <input type="number" class="form-control  text-center" value="10" />
+                </div>
+                <div class="card-footer">
+                  <span class="badge bg-primary">+0</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm">
+              <div class="card text-center">
+                <div class="card-header">
+                  CARISMA
+                </div>
+                <div class="card-body">
+                  <input type="number" class="form-control text-center" value="10" />
+                </div>
+                <div class="card-footer">
+                  <span class="badge bg-primary">+0</span>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
