--- a/src/app/sheet/sheet.component.html
+++ b/src/app/sheet/sheet.component.html
@@ -2,174 +2,248 @@
   <div class="row">
 
     <div class="col">
-      <br>
-      <div class="btn-group-vertical">
-        <button type="button" class="btn btn-outline-primary">Iniciar</button>
-        &nbsp;
-        <button type="button" class="btn btn-outline-primary">Iniciar</button>
-        &nbsp;
-        <button type="button" class="btn btn-outline-primary">Iniciar</button>
-        &nbsp;
-        <button type="button" class="btn btn-outline-primary">Iniciar</button>
-        &nbsp;
-        <button type="button" class="btn btn-outline-primary">Iniciar</button>
-        &nbsp;
-        <button type="button" class="btn btn-outline-primary">Iniciar</button>
 
-      </div>
     </div>
 
     <div class="col-10">
-      &nbsp;
-      <div class="text-center">
-        <div class="shadow-lg p-3 mb-5 bg-white rounded">
-          <div class="row">
-            <div class="col-4">
-              <div class="form-floating">
-                <input type="text" class="form-control" id="nomeChar" placeholder="Baldur">
-                <label for="nomeChar">Nome do Personagem</label>
+      <form [formGroup]="checkoutForm">
+
+        <div class="text-center">
+          <div class="shadow-lg p-3 mb-5 bg-white rounded">
+            <!--inicio informações base-->
+            <button type="button" class="btn btn-outline-primary dropdown-toggle" data-bs-toggle="collapse"
+              data-bs-target="#Base" aria-expanded="false" aria-controls="Base"> Informações Base </button>
+
+            <br>
+            <br>
+            <div class="row collapse " id="Base">
+              <div class="col-4">
+                <div class="form-floating">
+                  <input type="text" class="form-control" id="nomeChar" placeholder="Baldur">
+                  <label for="nomeChar">Nome do Personagem</label>
+                </div>
               </div>
-            </div>
-            <div class="col-8">
-              <div class="row">
-                <div class="col-3">
-                  <div class="form-floating">
-                    <input type="text" class="form-control" id="Class" placeholder="Class" data-bs-toggle="tooltip"
-                      data-bs-placement="top" title="Classe">
-                    <label for="Class">Classe</label>
+              <div class="col-8">
+                <div class="row">
+                  <div class="col-3">
+                    <div class="form-floating">
+                      <input type="text" class="form-control" id="Class" placeholder="Class" data-bs-toggle="tooltip"
+                        data-bs-placement="top" title="Classe">
+                      <label for="Class">Classe</label>
+                    </div>
+                  </div>
+                  <div class="col-2">
+                    <div class="form-floating">
+                      <input type="text" class="form-control" id="Level" placeholder="Level" data-bs-toggle="tooltip"
+                        data-bs-placement="top" title="Level">
+                      <label for="Level">Level</label>
+                    </div>
+                  </div>
+                  <div class="col-3">
+                    <div class="form-floating">
+                      <input type="text" class="form-control" id="Antecedente" placeholder="Antecedente"
+                        data-bs-toggle="tooltip" data-bs-placement="top" title="Antecedente">
+                      <label for="Antecedente">Antecedente</label>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="form-floating">
+                      <input type="text" class="form-control" id="NomeJogador" placeholder="Nome Jogador"
+                        data-bs-toggle="tooltip" data-bs-placement="top" title="Nome do Jogador">
+                      <label for="NomeJogador">Nome do Jogador</label>
+                    </div>
                   </div>
                 </div>
-                <div class="col-2">
-                  <div class="form-floating">
-                    <input type="text" class="form-control" id="Level" placeholder="Level" data-bs-toggle="tooltip"
-                      data-bs-placement="top" title="Level">
-                    <label for="Level">Level</label>
+                &nbsp;
+                <div class="row">
+                  <div class="col-3">
+                    <div class="form-floating">
+                      <input type="text" class="form-control" id="Raca" placeholder="Raça" data-bs-toggle="tooltip"
+                        data-bs-placement="top" title="Raça">
+                      <label for="Raca">Raça</label>
+                    </div>
                   </div>
-                </div>
-                <div class="col-3">
-                  <div class="form-floating">
-                    <input type="text" class="form-control" id="Antecedente" placeholder="Antecedente"
-                      data-bs-toggle="tooltip" data-bs-placement="top" title="Antecedente">
-                    <label for="Antecedente">Antecedente</label>
+                  <div class="col-5">
+                    <div class="form-floating">
+                      <input type="text" class="form-control" id="Alinhamento" placeholder="Alinhamento"
+                        data-bs-toggle="tooltip" data-bs-placement="top" title="Alinhamento">
+                      <label for="Alinhamento">Alinhamento</label>
+                    </div>
                   </div>
-                </div>
-                <div class="col">
-                  <div class="form-floating">
-                    <input type="text" class="form-control" id="NomeJogador" placeholder="Nome Jogador"
-                      data-bs-toggle="tooltip" data-bs-placement="top" title="Nome do Jogador">
-                    <label for="NomeJogador">Nome do Jogador</label>
-                  </div>
-                </div>
-              </div>
-              &nbsp;
-              <div class="row">
-                <div class="col-3">
-                  <div class="form-floating">
-                    <input type="text" class="form-control" id="Raca" placeholder="Raça" data-bs-toggle="tooltip"
-                      data-bs-placement="top" title="Raça">
-                    <label for="Raca">Raça</label>
-                  </div>
-                </div>
-                <div class="col-5">
-                  <div class="form-floating">
-                    <input type="text" class="form-control" id="Alinhamento" placeholder="Alinhamento"
-                      data-bs-toggle="tooltip" data-bs-placement="top" title="Alinhamento">
-                    <label for="Alinhamento">Alinhamento</label>
-                  </div>
-                </div>
-                <div class="col-2">
-                  <div class="form-floating">
-                    <input type="number" class="form-control" id="EXP" placeholder="EXP" data-bs-toggle="tooltip"
-                      data-bs-placement="top" title="EXP">
-                    <label for="EXP">EXP</label>
+                  <div class="col-2">
+                    <div class="form-floating">
+                      <input type="number" class="form-control" id="EXP" placeholder="EXP" data-bs-toggle="tooltip"
+                        data-bs-placement="top" title="EXP">
+                      <label for="EXP">EXP</label>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
-          <br>
-          <div class="row">
-            <div class="col-sm">
-              <div class="card text-center">
-                <div class="card-header">
-                  FORÇA
+            <!--fim informações base-->
+            <br>
+            <!--inicio informações atributos-->
+            <button type="button" class="btn btn-outline-success dropdown-toggle" data-bs-toggle="collapse"
+              data-bs-target="#atibutos" aria-expanded="false" aria-controls="atibutos"> Atributos </button>
+            <br>
+            <br>
+            <div class="row collapse" id="atibutos">
+              <div class="col-sm">
+                <div class="card text-center">
+                  <div class="card-header">
+                    FORÇA
+                  </div>
+                  <div class="card-body">
+                    <input type="number" class="form-control text-center" value="10" />
+                  </div>
+                  <div class="card-footer">
+                    <span class="badge bg-primary">+0</span>
+                  </div>
                 </div>
-                <div class="card-body">
-                  <input type="number" class="form-control text-center" value="10" />
+              </div>
+              <div class="col-sm">
+                <div class="card text-center">
+                  <div class="card-header">
+                    DESTREZA
+                  </div>
+                  <div class="card-body">
+                    <input type="number" class="form-control text-center" value="10" />
+                  </div>
+                  <div class="card-footer">
+                    <span class="badge bg-primary">+0</span>
+                  </div>
                 </div>
-                <div class="card-footer">
-                  <span class="badge bg-primary">+0</span>
+              </div>
+              <div class="col-sm">
+                <div class="card text-center">
+                  <div class="card-header">
+                    CONSTITUIÇÃO
+                  </div>
+                  <div class="card-body">
+                    <input type="number" class="form-control text-center" value="10" />
+                  </div>
+                  <div class="card-footer">
+                    <span class="badge bg-primary">+0</span>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm">
+                <div class="card text-center">
+                  <div class="card-header">
+                    INTELIGÊNCIA
+                  </div>
+                  <div class="card-body">
+                    <input type="number" class="form-control text-center" value="10" />
+                  </div>
+                  <div class="card-footer">
+                    <span class="badge bg-primary">+0</span>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm">
+                <div class="card text-center">
+                  <div class="card-header">
+                    SABEDORIA
+                  </div>
+                  <div class="card-body  ">
+                    <input type="number" class="form-control  text-center" value="10" />
+                  </div>
+                  <div class="card-footer">
+                    <span class="badge bg-primary">+0</span>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm">
+                <div class="card text-center">
+                  <div class="card-header">
+                    CARISMA
+                  </div>
+                  <div class="card-body">
+                    <input type="number" class="form-control text-center" value="10" />
+                  </div>
+                  <div class="card-footer">
+                    <span class="badge bg-primary">+0</span>
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="col-sm">
-              <div class="card text-center">
-                <div class="card-header">
-                  DESTREZA
-                </div>
-                <div class="card-body">
-                  <input type="number" class="form-control text-center" value="10" />
-                </div>
-                <div class="card-footer">
-                  <span class="badge bg-primary">+0</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm">
-              <div class="card text-center">
-                <div class="card-header">
-                  CONSTITUIÇÃO
-                </div>
-                <div class="card-body">
-                  <input type="number" class="form-control text-center" value="10" />
-                </div>
-                <div class="card-footer">
-                  <span class="badge bg-primary">+0</span>
+            <br>
+            <div class="row collapse" id="atibutos">
+
+              <div class="col-sm">
+                <div class="card text-center">
+                  <div class="card-header">
+                    Armadura
+                  </div>
+                  <div class="card-body">
+                    <input type="number" class="form-control text-center" value="10" />
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-sm">
-              <div class="card text-center">
-                <div class="card-header">
-                  INTELIGÊNCIA
-                </div>
-                <div class="card-body">
-                  <input type="number" class="form-control text-center" value="10" />
-                </div>
-                <div class="card-footer">
-                  <span class="badge bg-primary">+0</span>
+
+              <div class="col-sm">
+                <div class="card text-center">
+                  <div class="card-header">
+                    Iniciativa
+                  </div>
+                  <div class="card-body">
+                    <input type="number" class="form-control text-center" value="10" />
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-sm">
-              <div class="card text-center">
-                <div class="card-header">
-                  SABEDORIA
-                </div>
-                <div class="card-body  ">
-                  <input type="number" class="form-control  text-center" value="10" />
-                </div>
-                <div class="card-footer">
-                  <span class="badge bg-primary">+0</span>
+
+              <div class="col-sm">
+                <div class="card text-center">
+                  <div class="card-header">
+                    Deslocamento
+                  </div>
+                  <div class="card-body">
+                    <input type="number" class="form-control text-center" value="10" />
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-sm">
-              <div class="card text-center">
-                <div class="card-header">
-                  CARISMA
-                </div>
-                <div class="card-body">
-                  <input type="number" class="form-control text-center" value="10" />
-                </div>
-                <div class="card-footer">
-                  <span class="badge bg-primary">+0</span>
+
+              <div class="col-sm">
+                <div class="card text-center">
+                  <div class="card-header">
+                    Vida Maxima
+                  </div>
+                  <div class="card-body">
+                    <input type="number" class="form-control text-center" value="10" />
+                  </div>
+                  <div class="card-footer">
+                    <span class="badge bg-primary">Dado de Vida D10</span>
+                  </div>
                 </div>
               </div>
+
+              <div class="col-sm">
+                <div class="card text-center">
+                  <div class="card-header">
+                    Vida Atual </div>
+                  <div class="card-body">
+                    <input type="number" class="form-control text-center" value="10" />
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-sm">
+                <div class="card text-center">
+                  <div class="card-header">
+                    Vida Temporaria
+                  </div>
+                  <div class="card-body">
+                    <input type="number" class="form-control text-center" value="0" />
+                  </div>
+                </div>
+              </div>
+
             </div>
+            <!--fim informações atributos-->
           </div>
         </div>
-      </div>
+      </form>
+
     </div>
     <div class="col">
 
