--- a/src/app/sheet/sheet.component.html
+++ b/src/app/sheet/sheet.component.html
@@ -41,9 +41,9 @@
                   </div>
                   <div class="col-sm-3">
                     <div class="form-floating">
-                      <input type="text" class="form-control" id="Antecedente" placeholder="Antecedente"
-                        data-bs-toggle="tooltip" data-bs-placement="top" title="Antecedente">
-                      <label for="Antecedente">Antecedente</label>
+                      <input type="text" class="form-control" id="Altura" placeholder="Altura" data-bs-toggle="tooltip"
+                        data-bs-placement="top" title="Altura">
+                      <label for="Altura">Altura</label>
                     </div>
                   </div>
                   <div class="col-sm">
@@ -63,11 +63,18 @@
                       <label for="Raca">Raça</label>
                     </div>
                   </div>
-                  <div class="col-5">
+                  <div class="col-2">
                     <div class="form-floating">
-                      <input type="text" class="form-control" id="Alinhamento" placeholder="Alinhamento"
-                        data-bs-toggle="tooltip" data-bs-placement="top" title="Alinhamento">
-                      <label for="Alinhamento">Alinhamento</label>
+                      <input type="text" class="form-control" id="Idade" placeholder="Idade" data-bs-toggle="tooltip"
+                        data-bs-placement="top" title="Idade">
+                      <label for="Idade">Idade</label>
+                    </div>
+                  </div>
+                  <div class="col-3">
+                    <div class="form-floating">
+                      <input type="text" class="form-control" id="Proficiencia" placeholder="Proficiencia"
+                        data-bs-toggle="tooltip" data-bs-placement="top" title="Proficiencia">
+                      <label for="Proficiencia">Proficiencia</label>
                     </div>
                   </div>
                   <div class="col-2">
@@ -81,7 +88,7 @@
               </div>
             </div>
             <!--fim informações base-->
-            <br>
+            <hr />
             <!--inicio informações atributos-->
             <button type="button" class="btn btn-outline-success dropdown-toggle" data-bs-toggle="collapse"
               data-bs-target="#atibutos" aria-expanded="false" aria-controls="atibutos"> Atributos </button>
@@ -240,11 +247,28 @@
 
             </div>
             <!--fim informações atributos-->
-
+            <hr />
             <!--inicio informações antecedentes-->
             <button type="button" class="btn btn-outline-primary dropdown-toggle" data-bs-toggle="collapse"
               data-bs-target="#antecedentes" aria-expanded="false" aria-controls="antecedentes"> Antecedentes </button>
             <br>
+            <br>
+            <div class="row collapse" id="antecedentes">
+              <div class="col-sm">
+                <div class="form-floating">
+                  <input type="text" class="form-control" id="Alinhamento" placeholder="Alinhamento"
+                    data-bs-toggle="tooltip" data-bs-placement="top" title="Alinhamento">
+                  <label for="Alinhamento">Alinhamento</label>
+                </div>
+              </div>
+              <div class="col-sm">
+                <div class="form-floating">
+                  <input type="text" class="form-control" id="TxtAntecedente" placeholder="Antecedente"
+                    data-bs-toggle="tooltip" data-bs-placement="top" title="Antecedente">
+                  <label for="TxtAntecedente">Antecedente</label>
+                </div>
+              </div>
+            </div>
             <br>
             <div class="row collapse" id="antecedentes">
               <div class="col-sm">
@@ -291,7 +315,7 @@
                 </div>
               </div>
             </div>
-            <!--inicio informações antecedentes-->
+            <!--fim informações antecedentes-->
 
 
 
