--- a/src/app/sheet/sheet.component.html
+++ b/src/app/sheet/sheet.component.html
@@ -11,11 +11,11 @@
         <div class="text-center">
           <div class="shadow-lg p-3 mb-5 bg-white rounded">
             <!--inicio informações base-->
-            <button type="button" class="btn btn-outline-primary dropdown-toggle" data-bs-toggle="collapse"
-              data-bs-target="#Base" aria-expanded="false" aria-controls="Base"> Informações Base </button>
-
-            <br>
-            <br>
+            <div>
+              <button type="button" class="btn btn-outline-primary dropdown-toggle" data-bs-toggle="collapse"
+                data-bs-target="#Base" aria-expanded="false" aria-controls="Base"> Informações Base </button>
+            </div>
+            &nbsp;
             <div class="row collapse " id="Base">
               <div class="col-sm-4">
                 <div class="form-floating">
@@ -90,10 +90,11 @@
             <!--fim informações base-->
             <hr />
             <!--inicio informações atributos-->
-            <button type="button" class="btn btn-outline-success dropdown-toggle" data-bs-toggle="collapse"
-              data-bs-target="#atibutos" aria-expanded="false" aria-controls="atibutos"> Atributos </button>
-            <br>
-            <br>
+            <div>
+              <button type="button" class="btn btn-outline-success dropdown-toggle" data-bs-toggle="collapse"
+                data-bs-target="#atibutos" aria-expanded="false" aria-controls="atibutos"> Atributos </button>
+            </div>
+            &nbsp;
             <div class="row collapse" id="atibutos">
               <div class="col-sm">
                 <div class="card text-center">
@@ -249,10 +250,12 @@
             <!--fim informações atributos-->
             <hr />
             <!--inicio informações antecedentes-->
-            <button type="button" class="btn btn-outline-primary dropdown-toggle" data-bs-toggle="collapse"
-              data-bs-target="#antecedentes" aria-expanded="false" aria-controls="antecedentes"> Antecedentes </button>
-            <br>
-            <br>
+            <div>
+              <button type="button" class="btn btn-outline-primary dropdown-toggle" data-bs-toggle="collapse"
+                data-bs-target="#antecedentes" aria-expanded="false" aria-controls="antecedentes"> Antecedentes
+              </button>
+            </div>
+            &nbsp;
             <div class="row collapse" id="antecedentes">
               <div class="col-sm">
                 <div class="form-floating">
@@ -316,7 +319,61 @@
               </div>
             </div>
             <!--fim informações antecedentes-->
+            <hr>
+            <!--inicio informações pericias-->
+            <div>
+              <button type="button" class="btn btn-outline-primary dropdown-toggle" data-bs-toggle="collapse"
+                data-bs-target="#pericias" aria-expanded="false" aria-controls="pericias"> Perícias </button>
+            </div>
+            &nbsp;
+            <div class="row collapse" id="pericias">
+              <div class="row">
+                <div class="col-sm-2">
+                  <div class="form-check form-check-inline">
+                    <input type="checkbox" class="form-check-input" id="Atletismo" value="Atletismo">
+                    <label class="form-check-label">Atletismo</label>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="form-check form-check-inline">
+                    <input type="checkbox" class="form-check-input" id="Acrobacia" value="Acrobacia">
+                    <label class="form-check-label">Acrobacia</label>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="form-check form-check-inline">
+                    <input type="checkbox" class="form-check-input" id="Acrobacia" value="Acrobacia">
+                    <label class="form-check-label">Acrobacia</label>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="form-check form-check-inline">
+                    <input type="checkbox" class="form-check-input" id="Acrobacia" value="Acrobacia">
+                    <label class="form-check-label">Acrobacia</label>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="form-check form-check-inline">
+                    <input type="checkbox" class="form-check-input" id="Acrobacia" value="Acrobacia">
+                    <label class="form-check-label">Acrobacia</label>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="form-check form-check-inline">
+                    <input type="checkbox" class="form-check-input" id="Acrobacia" value="Acrobacia">
+                    <label class="form-check-label">Acrobacia</label>
+                  </div>
+                </div>
+                
 
+
+              
+              </div>
+
+
+
+            </div>
+            <!--fim informações pericias-->
 
 
 
