--- a/src/app/sheet/sheet.component.html
+++ b/src/app/sheet/sheet.component.html
@@ -327,51 +327,7 @@
             </div>
             &nbsp;
             <div class="row collapse" id="pericias">
-              <div class="row">
-                <div class="col-sm-2">
-                  <div class="form-check form-check-inline">
-                    <input type="checkbox" class="form-check-input" id="Atletismo" value="Atletismo">
-                    <label class="form-check-label">Atletismo</label>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="form-check form-check-inline">
-                    <input type="checkbox" class="form-check-input" id="Acrobacia" value="Acrobacia">
-                    <label class="form-check-label">Acrobacia</label>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="form-check form-check-inline">
-                    <input type="checkbox" class="form-check-input" id="Acrobacia" value="Acrobacia">
-                    <label class="form-check-label">Acrobacia</label>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="form-check form-check-inline">
-                    <input type="checkbox" class="form-check-input" id="Acrobacia" value="Acrobacia">
-                    <label class="form-check-label">Acrobacia</label>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="form-check form-check-inline">
-                    <input type="checkbox" class="form-check-input" id="Acrobacia" value="Acrobacia">
-                    <label class="form-check-label">Acrobacia</label>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="form-check form-check-inline">
-                    <input type="checkbox" class="form-check-input" id="Acrobacia" value="Acrobacia">
-                    <label class="form-check-label">Acrobacia</label>
-                  </div>
-                </div>
-                
-
-
-              
-              </div>
-
-
-
+              <div class="row"></div>
             </div>
             <!--fim informações pericias-->
 
