--- a/src/app/sheet/sheet.component.html
+++ b/src/app/sheet/sheet.component.html
@@ -8,12 +8,13 @@
     <div class="col-10">
       <form [formGroup]="checkoutForm" class="form">
 
-        <div class="text-center">
+        <div class="">
           <div class="shadow-lg p-3 mb-5 bg-white rounded">
             <!--inicio informações base-->
-            <div>
-              <button type="button" class="btn btn-outline-primary dropdown-toggle" data-bs-toggle="collapse"
-                data-bs-target="#Base" aria-expanded="false" aria-controls="Base"> Informações Base </button>
+            <div class="text-center">
+              <button type="button" class="btn btn-outline-primary dropdown-toggle text-center"
+                data-bs-toggle="collapse" data-bs-target="#Base" aria-expanded="false" aria-controls="Base"> Informações
+                Base </button>
             </div>
             &nbsp;
             <div class="row collapse " id="Base">
@@ -90,7 +91,7 @@
             <!--fim informações base-->
             <hr />
             <!--inicio informações atributos-->
-            <div>
+            <div class="text-center">
               <button type="button" class="btn btn-outline-success dropdown-toggle" data-bs-toggle="collapse"
                 data-bs-target="#atibutos" aria-expanded="false" aria-controls="atibutos"> Atributos </button>
             </div>
@@ -250,7 +251,7 @@
             <!--fim informações atributos-->
             <hr />
             <!--inicio informações antecedentes-->
-            <div>
+            <div class="text-center">
               <button type="button" class="btn btn-outline-primary dropdown-toggle" data-bs-toggle="collapse"
                 data-bs-target="#antecedentes" aria-expanded="false" aria-controls="antecedentes"> Antecedentes
               </button>
@@ -321,13 +322,97 @@
             <!--fim informações antecedentes-->
             <hr>
             <!--inicio informações pericias-->
-            <div>
+            <div class="text-center">
               <button type="button" class="btn btn-outline-primary dropdown-toggle" data-bs-toggle="collapse"
                 data-bs-target="#pericias" aria-expanded="false" aria-controls="pericias"> Perícias </button>
             </div>
             &nbsp;
             <div class="row collapse" id="pericias">
-              <div class="row"></div>
+              <div class="col-sm-4">
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id="Atletismo" value="Atletismo">
+                  <label class="form-check-label">Atletismo  </label>
+                </div>
+
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id="Prestidigitação" value="Prestidigitação">
+                  <label class="form-check-label">Prestidigitação  </label>
+                </div>
+
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id="Arcanismo" value="Arcanismo">
+                  <label class="form-check-label">Arcanismo  </label>
+                </div>
+
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id="História" value="História">
+                  <label class="form-check-label">História  </label>
+                </div>
+                
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id="Investigação" value="Investigação">
+                  <label class="form-check-label">Investigação  </label>
+                </div>
+
+              </div>
+              <div class="col-sm-4">
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id="Natureza" value="Natureza">
+                  <label class="form-check-label">Natureza</label>
+                </div>       
+                
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id="Religião" value="Religião">
+                  <label class="form-check-label">Religião</label>
+                </div>  
+
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id="AdestrarAnimais" value="AdestrarAnimais">
+                  <label class="form-check-label">Adestrar Animais</label>
+                </div>  
+
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id="Intuição" value="Intuição">
+                  <label class="form-check-label">Intuição</label>
+                </div> 
+
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id="Medicina" value="Medicina">
+                  <label class="form-check-label">Medicina</label>
+                </div> 
+
+              </div>
+              <div class="col-sm-4">
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id="Percepção" value="Percepção">
+                  <label class="form-check-label">Percepção</label>
+                </div> 
+
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id="Sobrevivência" value="Sobrevivência">
+                  <label class="form-check-label">Sobrevivência</label>
+                </div>           
+
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id="Atuação" value="Atuação">
+                  <label class="form-check-label">Atuação</label>
+                </div> 
+
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id="Enganação" value="Enganação">
+                  <label class="form-check-label">Enganação</label>
+                </div> 
+
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id="Intimidação" value="Intimidação">
+                  <label class="form-check-label">Intimidação</label>
+                </div> 
+
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id="Persuasão" value="Persuasão">
+                  <label class="form-check-label">Persuasão</label>
+                </div> 
+              </div>
             </div>
             <!--fim informações pericias-->
 
