--- a/src/app/sheet/sheet.component.html
+++ b/src/app/sheet/sheet.component.html
@@ -323,7 +323,7 @@
             <hr>
             <!--inicio informações pericias-->
             <div class="text-center">
-              <button type="button" class="btn btn-outline-primary dropdown-toggle" data-bs-toggle="collapse"
+              <button type="button" class="btn btn-outline-success dropdown-toggle" data-bs-toggle="collapse"
                 data-bs-target="#pericias" aria-expanded="false" aria-controls="pericias"> Perícias </button>
             </div>
             &nbsp;
@@ -412,9 +412,102 @@
                   <input type="checkbox" class="form-check-input" id="Persuasão" value="Persuasão">
                   <label class="form-check-label">Persuasão</label>
                 </div>
+
+
               </div>
             </div>
             <!--fim informações pericias-->
+            <hr>
+            <!--inicio informações equipamento-->
+            <div class="text-center">
+              <button type="button" class="btn btn-outline-primary dropdown-toggle" data-bs-toggle="collapse"
+                data-bs-target="#Equipamento" aria-expanded="false" aria-controls="Equipamento"> Equipamento </button>
+            </div>
+            &nbsp;
+            <div class="row collapse" id="Equipamento">
+              <div class="row">
+                <div class="col-sm">
+                  <div class="card text-center">
+                    <div class="card-header">
+                      Peças de Cobre
+                    </div>
+                    <div class="card-body">
+                      <input type="number" class="form-control text-center" value="10" />
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm">
+                  <div class="card text-center">
+                    <div class="card-header">
+                      Peças de Prata
+                    </div>
+                    <div class="card-body">
+                      <input type="number" class="form-control text-center" value="10" />
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm">
+                  <div class="card text-center">
+                    <div class="card-header">
+                      Peças de electrum
+                    </div>
+                    <div class="card-body">
+                      <input type="number" class="form-control text-center" value="10" />
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm">
+                  <div class="card text-center">
+                    <div class="card-header">
+                      Peças de Ouro
+                    </div>
+                    <div class="card-body">
+                      <input type="number" class="form-control text-center" value="10" />
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm">
+                  <div class="card text-center">
+                    <div class="card-header">
+                      Peças de Platina
+                    </div>
+                    <div class="card-body">
+                      <input type="number" class="form-control text-center" value="10" />
+                    </div>
+                  </div>
+                </div>
+              </div>
+              &nbsp;
+              <div class="row">
+                <div class="text-center">
+                  <br>
+                  <h3>
+                    Itens
+                  </h3>
+                </div>
+                <table class="table table-bordered border-primary">
+                  <thead>
+                    <tr>
+                      <th scope="col">Item</th>
+                      <th scope="col">Descricao</th>
+                      <th scope="col">Qtd</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+
+                      <td>Armadura Leve</td>
+                      <td>+5 CA </td>
+                      <td>1</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+            <!--inicio informações equipamento-->
+
+
+
 
           </div>
         </div>
