--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,9 +9,13 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" routerLink="/sheet" routerLinkActive="active">Create Sheet</a>
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">        
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Dropdown</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" aria-current="page" routerLink="/sheet" routerLinkActive="active">Create Manual Sheet</a></li>
+            <li><a class="dropdown-item" aria-current="page" routerLink="/sheet" routerLinkActive="active">Create With Assistance</a></li>           
+          </ul>
         </li>
         <li class="nav-item">
           <a class="nav-link">How To Create a Sheet</a>
