--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg  navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand">
+    <a class="navbar-brand" href="index.html">
       <img src="../assets/imgs/dnd.png" alt="" width="50" height="50" class="d-inline-block">
       D&D Character Maker
     </a>
@@ -8,13 +8,13 @@
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="collapse bg-dark navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">        
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Dropdown</a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" aria-current="page" routerLink="/sheet" routerLinkActive="active">Create Manual Sheet</a></li>
-            <li><a class="dropdown-item" aria-current="page" routerLink="/sheet" routerLinkActive="active">Create With Assistance</a></li>           
+            <li><a class="dropdown-item" aria-current="page" routerLink="/CreateSheet" routerLinkActive="active">Create With Assistance</a></li>           
           </ul>
         </li>
         <li class="nav-item">
