--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,12 +9,15 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse bg-dark navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">        
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Dropdown</a>
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+            aria-expanded="false">Create Sheet</a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" aria-current="page" routerLink="/sheet" routerLinkActive="active">Create Manual Sheet</a></li>
-            <li><a class="dropdown-item" aria-current="page" routerLink="/CreateSheet" routerLinkActive="active">Create With Assistance</a></li>           
+            <li><a class="dropdown-item" aria-current="page" routerLink="/sheet" routerLinkActive="active">Create Manual
+                Sheet</a></li>
+            <li><a class="dropdown-item" aria-current="page" routerLink="/CreateSheet" routerLinkActive="active">Create
+                With Assistance</a></li>
           </ul>
         </li>
         <li class="nav-item">
