--- a/src/app/create-sheet/create-sheet.component.html
+++ b/src/app/create-sheet/create-sheet.component.html
@@ -10,24 +10,14 @@
       <!-- fieldsets -->
 
       <fieldset *ngIf="step == 1">
-        <h2 class="fs-title">Personal Details</h2>
-        <input type="text" formControlName="name" placeholder="Full Name" />
-
-        <input type="text" formControlName="email" name="email" placeholder="Email" />
-
-        <input type="text" formControlName="phone" name="phone" placeholder="Phone" />
+        <app-chose-race></app-chose-race>
 
         <input (click)="next()" type="button" name="next" class="next action-button" value="Next" />
       </fieldset>
     </form>
     <form [formGroup]="addressDetails" id="msform">
       <fieldset *ngIf="step == 2">
-        <h2 class="fs-title">Address Details</h2>
-        <input type="text" formControlName="city" placeholder="City" />
 
-        <textarea rows="5" cols="5" formControlName="address" placeholder="address"></textarea>
-
-        <input type="text" formControlName="pincode" placeholder="Pincode" />
 
         <input (click)="previous()" type="button" name="previous" class="previous action-button-previous"
           value="Previous" />
@@ -36,12 +26,7 @@
     </form>
     <form [formGroup]="addressDetails" id="msform">
       <fieldset *ngIf="step == 3">
-        <h2 class="fs-title">Educational Details</h2>
-        <input type="text" formControlName="highest_qualification" placeholder="Highest Qualification" />
 
-        <input type="text" formControlName="university" placeholder="University" />
-
-        <input type="text" formControlName="total_marks" placeholder="Total Marks" />
 
         <input (click)="previous()" type="button" name="previous" class="previous action-button-previous"
           value="Previous" />
