--- a/src/app/create-sheet/create-sheet.component.html
+++ b/src/app/create-sheet/create-sheet.component.html
@@ -1,38 +1,25 @@
 <div class="row">
   <div class="col-md-12 col-md-offset-3">
-    <form [formGroup]="personalDetails" id="msform">
-      <!-- progressbar -->
-      <ul id="progressbar">
-        <li [ngClass]="step>=1 ? 'active ' : 'inactive'">Personal Details</li>
-        <li [ngClass]="step>=2 ? 'active' : 'inactive'">Social Profiles</li>
-        <li [ngClass]="step==3 ? 'active' : 'inactive'">Account Setup</li>
-      </ul>
-      <!-- fieldsets -->
 
-      <fieldset *ngIf="step == 1">
-        <app-chose-race></app-chose-race>
+    <fieldset *ngIf="step == 1">
+      <app-chose-race></app-chose-race>
 
-        <input (click)="next()" type="button" name="next" class="next action-button" value="Next" />
-      </fieldset>
-    </form>
-    <form [formGroup]="addressDetails" id="msform">
-      <fieldset *ngIf="step == 2">
+      <input (click)="next()" type="button" name="next" class="next action-button" value="Next" />
+    </fieldset>
 
+    <fieldset *ngIf="step == 2">
+      <span>2</span>
 
-        <input (click)="previous()" type="button" name="previous" class="previous action-button-previous"
-          value="Previous" />
-        <input (click)="next()" type="button" name="next" class="next action-button" value="Next" />
-      </fieldset>
-    </form>
-    <form [formGroup]="addressDetails" id="msform">
-      <fieldset *ngIf="step == 3">
+      <input (click)="previous()" type="button" name="previous" class="previous action-button-previous"
+        value="Previous" />
+      <input (click)="next()" type="button" name="next" class="next action-button" value="Next" />
+    </fieldset>
+    <fieldset *ngIf="step == 3">
+      <span>3</span>
+      <input (click)="previous()" type="button" name="previous" class="previous action-button-previous"
+        value="Previous" />
+    </fieldset>
 
-
-        <input (click)="previous()" type="button" name="previous" class="previous action-button-previous"
-          value="Previous" />
-
-      </fieldset>
-    </form>
 
   </div>
 </div>
